--- a/src/app/reporteproducto/reporteproducto.component.html
+++ b/src/app/reporteproducto/reporteproducto.component.html
@@ -166,7 +166,7 @@
 
 
     </div>
-    <div class="card-body">
+    <div class="card-body text-center">
       <div class="table-responsive">
         <table class="table">
           <thead class="text-primary">
@@ -227,7 +227,7 @@
 
 
     </div>
-    <div class="card-body">
+    <div class="card-body text-center">
       <div class="table-responsive">
         <table class="table">
           <thead class="text-primary">
@@ -281,7 +281,7 @@
 
 
     </div>
-    <div class="card-body">
+    <div class="card-body text-center" >
       <div class="table-responsive">
         <table class="table">
           <thead class="text-primary">
