--- a/src/app/crear-administrador/crear-administrador.component.scss
+++ b/src/app/crear-administrador/crear-administrador.component.scss
@@ -133,17 +133,18 @@ input {
   background: rgb(222, 21, 21);
   color: white;
   display: block;
-  width: 30%;
+  width: calc(100% - 2rem);
   height: 40px;
   border: none;
   border-radius: 10px;
-  margin: 1rem auto;
+  margin: 1rem auto 1rem; /* Ajusta el valor de margin-top y margin-bottom según sea necesario */
   text-align: center;
   padding: 0.25rem;
   transition: 250ms background ease-in;
   cursor: pointer;
   font-weight: bold;
   font-size: 1rem;
+  margin-top: 2px;
 }
 
 .login-submit:hover,
@@ -280,11 +281,11 @@ input {
   /* Agrega un espaciado superior */
   margin-right: 1rem;
   /* Agrega un espaciado derecho */
-}
+} 
 
 .close-button:focus,
 button:hover {
-  background-color: red;
+  background-color: rgb(204, 196, 196);
 }
 
 h1 {
