--- a/src/app/listado-usuarios/listado-usuarios.component.html
+++ b/src/app/listado-usuarios/listado-usuarios.component.html
@@ -23,10 +23,27 @@
       <div class="col-md-12">
 
         <div class="card">
-          <div class="card-header card-header-danger">
+          <div class="card-header card-header-danger d-flex align-items-center justify-content-between">
             <h4 class="card-title disabled"> <img src="assets/img/usuarios.png" alt=""> Usuarios clientes</h4>
+           
+            <li class="nav-item dropdown">
+              <a class="nav-link label2 col" href="javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"  >
+                Descargar    <i class="material-icons">file_download</i> 
+                
+                  <p>
+                      <span class="d-lg-none d-md-block">Some Actions</span>
+                  </p>
+              </a>
+              <div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" (click)="descargarDatos()"  >Exportar a excel <img class="tamimg" src="/assets/img/microsoft-excel.svg" alt=""> </a>
+                  <a class="dropdown-item" (click)="descargarPDF()"  > Exportar a pdf <i class="material-icons">picture_as_pdf</i></a>
+                
+                  
+              </div>
+          </li>
+  
           </div>
-          <div class="card-body">
+          <div class="card-body text-center">
             <div class="table-responsive">
               <table class="table">
                 <thead class=" text-primary">
@@ -36,9 +53,7 @@
                   <th>
                     Usuario
                   </th>
-                  <th>
-                    Contraseña
-                  </th>
+                
                   <th>
                     Nombres
                   </th>
@@ -57,9 +72,9 @@
 
                 </thead>
                 <tbody >
-                  <ng-container *ngFor="let item of usuariosss; let i = index">
+                  <ng-container *ngFor="let item of pagedMenus; let i = index">
                     <ng-container *ngIf="(!nombreproductoFiltro || item.persona.nombre.toLowerCase().includes(nombreproductoFiltro.toLowerCase()))">
-  
+   
                   <tr>
                     <td>
                       {{i+1}}
@@ -67,9 +82,7 @@
                     <td>
                       {{item.usuario}}
                     </td>
-                    <td>
-                      **************
-                    </td>
+                    
                     <td>
                       {{item.persona.nombre}}
                     </td>
@@ -94,9 +107,28 @@
 
                       <button2> <i class="material-icons editable-row" (click)="showModalEliminar(item.id)">delete</i>
                       </button2>
-                      <button3 (click)="toggleButtonState()">
-                        <i class='material-icons toggle_on' [ngClass]="{'active': isToggleOn, 'inactive': !isToggleOn}">{{ isToggleOn ? 'toggle_on' : 'toggle_off' }}</i>
-                      </button3>
+                     
+
+                      <button3 (click)="showModalCambiarEstado(item)"
+                      [style.Color]="item.persona.estado === true ? 'green' : 'gray'">
+               <i class="material-icons"
+                  [ngClass]="{'toggle_on': item.persona.estado === 1, 'toggle_off': item.persona.estado === 0}">
+                 {{ item.persona.estado ? 'toggle_on' : 'toggle_off' }}
+               </i>
+               <p [ngClass]="{'active-text': item.persona.estado === 1, 'inactive-text': item.persona.estado === 0}">
+                 <span [ngClass]="{'active-text': item.persona.estado === 1, 'inactive-text': item.persona.estado === 0}">{{ item.persona.estado ? 'activo' : 'inactivo' }}</span>
+               </p>
+             </button3>
+             
+                      
+                      
+                      
+                      
+                      
+                      
+
+
+
                     </td>
 
                   </tr>
@@ -188,10 +220,7 @@
             <label for="inputState" class="select-gr">Teléfono</label> <br>
             <input class="example-full-width estilos" type="text" formControlName="telefono">
           </div>
-          <div class="form-group col-md-8">
-            <label for="inputState" class="select-gr">Foto</label> <br>
-            <input class="example-full-width estilos" type="text" formControlName="foto">
-          </div>
+        
 
         </form>
       </div>
