--- a/src/app/listadoadministradores/listadoadministradores.component.html
+++ b/src/app/listadoadministradores/listadoadministradores.component.html
@@ -23,12 +23,29 @@
       <div class="col-md-12">
 
         <div class="card">
-          <div class="card-header card-header-danger">
+          <div class="card-header card-header-danger d-flex align-items-center justify-content-between">
             <h4 class="card-title disabled"> <img src="assets/img/usuarios.png" alt=""> Usuarios administradores</h4>
+        
+
+            <li class="nav-item dropdown">
+              <a class="nav-link label2 col" href="javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"  >
+                Descargar    <i class="material-icons">file_download</i> 
+                
+                  <p>
+                      <span class="d-lg-none d-md-block">Some Actions</span>
+                  </p>
+              </a>
+              <div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" (click)="descargarDatos()"  >Exportar a excel <img class="tamimg" src="/assets/img/microsoft-excel.svg" alt=""> </a>
+                  <a class="dropdown-item" (click)="descargarPDF()"  > Exportar a pdf <i class="material-icons">picture_as_pdf</i></a>
+                
+                  
+              </div>
+          </li>
           </div>
-          <div class="card-body">
+          <div class="card-body text-center">
             <div class="table-responsive">
-              <table class="table">
+              <table class="table ">
                 <thead class=" text-primary">
                   <th>
                     No
@@ -53,7 +70,7 @@
 
                 </thead>
                 <tbody>
-                    <ng-container *ngFor="let item of usuariosss; let i = index">
+                    <ng-container *ngFor="let item of pagedMenus; let i = index">
                         <ng-container *ngIf="(!nombreproductoFiltro || item.persona.nombre.toLowerCase().includes(nombreproductoFiltro.toLowerCase()))">
       
                   <tr>
