--- a/src/app/reporte/reporte.component.html
+++ b/src/app/reporte/reporte.component.html
@@ -23,8 +23,7 @@
                       </p>
                   </a>
                   <div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                      <a class="dropdown-item"  routerLink="/configuracionyprivacidad" > <i class="material-icons">settings</i> Cofiguración y privacidad</a>
-                      <a class="dropdown-item" routerLink="/ayuda"><i class="material-icons">help</i> Ayuda</a>
+                      <a class="dropdown-item"  routerLink="/editardatosperfil" > <i class="material-icons">settings</i> Cofiguración y privacidad</a>
                       <a class="dropdown-item xx" (click)="showModalcerrar()"> <i class="material-icons">exit_to_app</i>  Cerrar sesión</a>
                       
                   </div>
@@ -72,38 +71,39 @@
           <div class="col-md-12">
     
             <div class="card">
-              <div class="card-header card-header-danger">
-                <h4 class="card-title disabled"> <img src="/assets/img/tarjeta-de-credito.png" class="edit" alt=""> Reporte de: {{usuario}}
+              <div class="card-header card-header-danger d-flex align-items-center justify-content-between">
+                
+                <h4 class="card-title disabled"> <img src="/assets/img/tarjeta-de-credito.png" class="edit" alt=""> Reporte de convenio
                 </h4>
-    
+                <li class="nav-item dropdown">
+                  <a class="nav-link label2 col" href="javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"  >
+                    Descargar    <i class="material-icons">file_download</i> 
+                    
+                      <p>
+                          <span class="d-lg-none d-md-block">Some Actions</span>
+                      </p>
+                  </a>
+                  <div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                      <a class="dropdown-item" (click)="descargarDatos()"  >Exportar a excel <img class="tamimg" src="/assets/img/microsoft-excel.svg" alt=""> </a>
+                      <a class="dropdown-item" (click)="descargarPDF()"  > Exportar a pdf <i class="material-icons">picture_as_pdf</i></a>
+                    
+                      
+                  </div>
+              </li>
+      
               </div>
-              <div class="card-body">
+              <div class="card-body text-center">
                 <div class="table-responsive">
                   <table class="table ">
-                    <thead class=" text-primary">
-                      <th>
-                        Nº
-                      </th>
-                     
-                      <th>
-                        Plato
-                      </th>
-                      <th>
-                        Cantidad
-                      </th>
-                      <th>
-                        Precio
-                      </th>
+                    <thead class="text-primary red-bold-text">
+                      <th>Nº</th>
+                      <th>Plato</th>
+                      <th>Cantidad</th>
+                      <th>Precio</th>
+                      <th>Fecha</th>
                    
-                      <th>
-                        Fecha
-                      </th>
-                      <th>
-                        Pagado
-                      </th>
-    
-    
                     </thead>
+                    
                     <tbody *ngFor="let item of creditosss ;let i=index ">
                       <tr>
     
@@ -124,9 +124,7 @@
                         <td>
                           {{item.fecha}}
                         </td>
-                        <td>
-                          {{item.pagado}}
-                        </td>
+                        
                       
                        
     
@@ -157,30 +155,6 @@
 
    
   </main>
-<!--   <button class="btn-download" (click)="generarPDF()">Descargar PDF</button>
 
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
-  <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
-
-  <script>
-    function generarPDF() {
-      const content = document.getElementById('report-content');
-
-      // Creamos una nueva instancia de jsPDF
-      const pdf = new jspdf.jsPDF();
-
-      // Convertimos el contenido del reporte a una imagen
-      html2canvas(content).then(canvas => {
-        const imgData = canvas.toDataURL('image/png');
-
-        // Agregamos la imagen al PDF
-        pdf.addImage(imgData, 'PNG', 10, 10, 190, 0);
-
-        // Descargamos el PDF
-        pdf.save('reporte_usuario.pdf');
-      });
-    }
-  </script>
-</body>
- -->
+  
