--- a/src/app/reporteingresos/reporteingresos.component.html
+++ b/src/app/reporteingresos/reporteingresos.component.html
@@ -94,7 +94,7 @@
 
 
     </div>
-    <div class="card-body">
+    <div class="card-body text-center">
       <div class="table-responsive">
         <table class="table">
           <thead class="text-primary">
